force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/Scale_Utility_Cluster_Registration__c.object-meta.xml
<CustomObject>
    <description>SOX object - This store the registration of Scale Utility clusters against an account and Global Commit Id. There could be multiple clusters registered against an account and Global Commit ID but a cluster can&apos;t have multiple Global Commit IDs.</description>
    <label>Scale Utility Cluster Registration</label>
    <nameField>
        <displayFormat>CRR-{0000000000}</displayFormat>
        <label>Scale Utility Cluster Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scale Utility Cluster Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>