force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account of the Service Contract a Cluster is registered for.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scale Utility Cluster Registrations</relationshipLabel>
    <relationshipName>Scale_Utility_Cluster_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>