force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Cluster_UUID__c.field-meta.xml
<CustomField>
    <fullName>Cluster_UUID__c</fullName>
    <label>Cluster UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>