force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Global_Commit_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Commit_ID__c</fullName>
    <label>Global Commit ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>