force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/License_ID__c.field-meta.xml
<CustomField>
    <fullName>License_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scale Utility Cluster Registrations</relationshipLabel>
    <relationshipName>Scale_Utility_Cluster_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>