force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/License_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>License_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Scale Utility Cluster Registrations</relationshipLabel>
    <relationshipName>Scale_Utility_Cluster_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>