force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Scale Utility Cluster Registrations</relationshipLabel>
    <relationshipName>Scale_Utility_Cluster_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>