force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>Service_Contract_ID__r.SBQQSC__Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order #</label>
    <type>Text</type>
</CustomField>