force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/RSC_URL__c.field-meta.xml
<CustomField>
    <fullName>RSC_URL__c</fullName>
    <label>RSC URL</label>
    <type>Url</type>
</CustomField>