force-app/main/default/objects/Scale_Utility_Cluster_Registration__c/fields/Service_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Scale Utility Cluster Registrations</relationshipLabel>
    <relationshipName>Scale_Utility_Cluster_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>